/*
 *  UCF COP3330 Fall 2021 Application Assignment 1 Solution
 *  Copyright 2021 aidan earnest
 */

public class Item extends TodoList {
    private String description;
    private String dueDate;
    private boolean complete;

    public static String[] saveItem(String[] items) {
        //Set User Input from fields to established variables
        //Use boolean to establish state of item (probably use a cross out function or change font color)
        //Convert description and dueDate into single string to be saved to array
        //Use array from superclass
        //Save item to array at same index

        //Return updated items array
        return null;
    }
}
