@startuml

class Application
class Directory
class TodoList
abstract class  item

Application -- Directory
Directory *-- TodoList
TodoList *-- item

abstract class item {
    - String description
    - String dueDate
    - boolean complete
    + saveItem(items)
}

class TodoList {
    - String name
    - String[] items
    - String selectedItem
    + addItem(items)
    + deleteItem(items, selectedItem)
    + editItem(items, selectedItem)
    + saveContents(todoList)
}

class Directory {
    - HashMap<String, String[]> todoList
    - HashMap<String, String[]> selection
    + addTodoList()
    + removeTodoList(todoList, selection)
    + editTodoList(selection)
    + saveTodoList(selection)
    + buildMap()
}

class Application {
    + void start(Stage stage)
    + static void main(String[] args)
    + void newListButton()
    + void existingListButton()
    + void todoListManager()
}
@enduml